// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests for <Input /> should match aria SnapShot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    ariaDescribedBy="ariaDescribedBy"
    ariaLabel="ariaLabel"
    className=""
    clear={false}
    clearAriaLabel={null}
    containerSize=""
    defaultValue=""
    disabled={false}
    htmlId="1"
    id={null}
    inputAfter={null}
    inputBefore={null}
    inputClassName=""
    inputHelpText=""
    inputRef={null}
    inputSize=""
    isFilled={false}
    label="test"
    messageArr={Array []}
    multiline={false}
    name="test"
    nestedLevel={0}
    onChange={null}
    onDoneEditing={null}
    onFocus={null}
    onKeyDown={null}
    onMouseDown={null}
    placeholder=""
    readOnly={false}
    secondaryLabel=""
    shape=""
    type="text"
    value=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Label
          className="md-input__label"
          htmlFor="1"
          label="test"
          theme=""
        />,
        <div
          className="md-input__wrapper"
        >
          <input
            aria-describedby="ariaDescribedBy"
            aria-label="ariaLabel"
            className="md-input"
            id="1"
            name="test"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            tabIndex={0}
            type="text"
            value=""
          />
        </div>,
        "",
        "",
        null,
      ],
      "className": "md-input-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": null,
          "className": "md-input__label",
          "htmlFor": "1",
          "label": "test",
          "theme": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            null,
            <input
              aria-describedby="ariaDescribedBy"
              aria-label="ariaLabel"
              className="md-input"
              id="1"
              name="test"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              tabIndex={0}
              type="text"
              value=""
            />,
            null,
          ],
          "className": "md-input__wrapper",
        },
        "ref": null,
        "rendered": Array [
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "aria-describedby": "ariaDescribedBy",
              "aria-label": "ariaLabel",
              "className": "md-input",
              "id": "1",
              "name": "test",
              "onBlur": [Function],
              "onChange": [Function],
              "onFocus": [Function],
              "onKeyDown": [Function],
              "onMouseDown": [Function],
              "tabIndex": 0,
              "type": "text",
              "value": "",
            },
            "ref": [Function],
            "rendered": null,
            "type": "input",
          },
          null,
        ],
        "type": "div",
      },
      "",
      "",
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Label
            className="md-input__label"
            htmlFor="1"
            label="test"
            theme=""
          />,
          <div
            className="md-input__wrapper"
          >
            <input
              aria-describedby="ariaDescribedBy"
              aria-label="ariaLabel"
              className="md-input"
              id="1"
              name="test"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              tabIndex={0}
              type="text"
              value=""
            />
          </div>,
          "",
          "",
          null,
        ],
        "className": "md-input-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": null,
            "className": "md-input__label",
            "htmlFor": "1",
            "label": "test",
            "theme": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              null,
              <input
                aria-describedby="ariaDescribedBy"
                aria-label="ariaLabel"
                className="md-input"
                id="1"
                name="test"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                tabIndex={0}
                type="text"
                value=""
              />,
              null,
            ],
            "className": "md-input__wrapper",
          },
          "ref": null,
          "rendered": Array [
            null,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-describedby": "ariaDescribedBy",
                "aria-label": "ariaLabel",
                "className": "md-input",
                "id": "1",
                "name": "test",
                "onBlur": [Function],
                "onChange": [Function],
                "onFocus": [Function],
                "onKeyDown": [Function],
                "onMouseDown": [Function],
                "tabIndex": 0,
                "type": "text",
                "value": "",
              },
              "ref": [Function],
              "rendered": null,
              "type": "input",
            },
            null,
          ],
          "type": "div",
        },
        "",
        "",
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`tests for <Input /> should match clear SnapShot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    ariaDescribedBy={null}
    ariaLabel={null}
    className=""
    clear={true}
    clearAriaLabel={null}
    containerSize=""
    defaultValue=""
    disabled={false}
    htmlId="1"
    id={null}
    inputAfter={null}
    inputBefore={null}
    inputClassName=""
    inputHelpText=""
    inputRef={null}
    inputSize=""
    isFilled={false}
    label="test"
    messageArr={Array []}
    multiline={false}
    name="test"
    nestedLevel={0}
    onChange={null}
    onDoneEditing={null}
    onFocus={null}
    onKeyDown={null}
    onMouseDown={null}
    placeholder=""
    readOnly={false}
    secondaryLabel=""
    shape=""
    type="text"
    value=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Label
          className="md-input__label"
          htmlFor="1"
          label="test"
          theme=""
        />,
        <div
          className="md-input__wrapper"
        >
          <input
            className="md-input"
            id="1"
            name="test"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            tabIndex={0}
            type="text"
            value=""
          />
        </div>,
        "",
        "",
        null,
      ],
      "className": "md-input-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": null,
          "className": "md-input__label",
          "htmlFor": "1",
          "label": "test",
          "theme": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            null,
            <input
              className="md-input"
              id="1"
              name="test"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              tabIndex={0}
              type="text"
              value=""
            />,
            null,
          ],
          "className": "md-input__wrapper",
        },
        "ref": null,
        "rendered": Array [
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "md-input",
              "id": "1",
              "name": "test",
              "onBlur": [Function],
              "onChange": [Function],
              "onFocus": [Function],
              "onKeyDown": [Function],
              "onMouseDown": [Function],
              "tabIndex": 0,
              "type": "text",
              "value": "",
            },
            "ref": [Function],
            "rendered": null,
            "type": "input",
          },
          null,
        ],
        "type": "div",
      },
      "",
      "",
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Label
            className="md-input__label"
            htmlFor="1"
            label="test"
            theme=""
          />,
          <div
            className="md-input__wrapper"
          >
            <input
              className="md-input"
              id="1"
              name="test"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              tabIndex={0}
              type="text"
              value=""
            />
          </div>,
          "",
          "",
          null,
        ],
        "className": "md-input-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": null,
            "className": "md-input__label",
            "htmlFor": "1",
            "label": "test",
            "theme": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              null,
              <input
                className="md-input"
                id="1"
                name="test"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                tabIndex={0}
                type="text"
                value=""
              />,
              null,
            ],
            "className": "md-input__wrapper",
          },
          "ref": null,
          "rendered": Array [
            null,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "md-input",
                "id": "1",
                "name": "test",
                "onBlur": [Function],
                "onChange": [Function],
                "onFocus": [Function],
                "onKeyDown": [Function],
                "onMouseDown": [Function],
                "tabIndex": 0,
                "type": "text",
                "value": "",
              },
              "ref": [Function],
              "rendered": null,
              "type": "input",
            },
            null,
          ],
          "type": "div",
        },
        "",
        "",
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`tests for <Input /> should match number SnapShot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    ariaDescribedBy={null}
    ariaLabel={null}
    className=""
    clear={false}
    clearAriaLabel={null}
    containerSize=""
    defaultValue=""
    disabled={false}
    htmlId="1"
    id={null}
    inputAfter={null}
    inputBefore={null}
    inputClassName=""
    inputHelpText=""
    inputRef={null}
    inputSize=""
    isFilled={false}
    label="test"
    messageArr={Array []}
    multiline={false}
    name="test"
    nestedLevel={0}
    onChange={null}
    onDoneEditing={null}
    onFocus={null}
    onKeyDown={null}
    onMouseDown={null}
    placeholder=""
    readOnly={false}
    secondaryLabel=""
    shape=""
    type="number"
    value=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Label
          className="md-input__label"
          htmlFor="1"
          label="test"
          theme=""
        />,
        <div
          className="md-input__wrapper"
        >
          <input
            className="md-input"
            id="1"
            name="test"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            tabIndex={0}
            type="number"
            value=""
          />
        </div>,
        "",
        "",
        null,
      ],
      "className": "md-input-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": null,
          "className": "md-input__label",
          "htmlFor": "1",
          "label": "test",
          "theme": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            null,
            <input
              className="md-input"
              id="1"
              name="test"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              tabIndex={0}
              type="number"
              value=""
            />,
            null,
          ],
          "className": "md-input__wrapper",
        },
        "ref": null,
        "rendered": Array [
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "md-input",
              "id": "1",
              "name": "test",
              "onBlur": [Function],
              "onChange": [Function],
              "onFocus": [Function],
              "onKeyDown": [Function],
              "onMouseDown": [Function],
              "tabIndex": 0,
              "type": "number",
              "value": "",
            },
            "ref": [Function],
            "rendered": null,
            "type": "input",
          },
          null,
        ],
        "type": "div",
      },
      "",
      "",
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Label
            className="md-input__label"
            htmlFor="1"
            label="test"
            theme=""
          />,
          <div
            className="md-input__wrapper"
          >
            <input
              className="md-input"
              id="1"
              name="test"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              tabIndex={0}
              type="number"
              value=""
            />
          </div>,
          "",
          "",
          null,
        ],
        "className": "md-input-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": null,
            "className": "md-input__label",
            "htmlFor": "1",
            "label": "test",
            "theme": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              null,
              <input
                className="md-input"
                id="1"
                name="test"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                tabIndex={0}
                type="number"
                value=""
              />,
              null,
            ],
            "className": "md-input__wrapper",
          },
          "ref": null,
          "rendered": Array [
            null,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "md-input",
                "id": "1",
                "name": "test",
                "onBlur": [Function],
                "onChange": [Function],
                "onFocus": [Function],
                "onKeyDown": [Function],
                "onMouseDown": [Function],
                "tabIndex": 0,
                "type": "number",
                "value": "",
              },
              "ref": [Function],
              "rendered": null,
              "type": "input",
            },
            null,
          ],
          "type": "div",
        },
        "",
        "",
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`tests for <Input /> should match password SnapShot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    ariaDescribedBy={null}
    ariaLabel={null}
    className=""
    clear={false}
    clearAriaLabel={null}
    containerSize=""
    defaultValue=""
    disabled={false}
    htmlId="1"
    id={null}
    inputAfter={null}
    inputBefore={null}
    inputClassName=""
    inputHelpText=""
    inputRef={null}
    inputSize=""
    isFilled={false}
    label="test"
    messageArr={Array []}
    multiline={false}
    name="test"
    nestedLevel={0}
    onChange={null}
    onDoneEditing={null}
    onFocus={null}
    onKeyDown={null}
    onMouseDown={null}
    placeholder=""
    readOnly={false}
    secondaryLabel=""
    shape=""
    type="password"
    value=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Label
          className="md-input__label"
          htmlFor="1"
          label="test"
          theme=""
        />,
        <div
          className="md-input__wrapper"
        >
          <input
            className="md-input"
            id="1"
            name="test"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            tabIndex={0}
            type="password"
            value=""
          />
        </div>,
        "",
        "",
        null,
      ],
      "className": "md-input-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": null,
          "className": "md-input__label",
          "htmlFor": "1",
          "label": "test",
          "theme": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            null,
            <input
              className="md-input"
              id="1"
              name="test"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              tabIndex={0}
              type="password"
              value=""
            />,
            null,
          ],
          "className": "md-input__wrapper",
        },
        "ref": null,
        "rendered": Array [
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "md-input",
              "id": "1",
              "name": "test",
              "onBlur": [Function],
              "onChange": [Function],
              "onFocus": [Function],
              "onKeyDown": [Function],
              "onMouseDown": [Function],
              "tabIndex": 0,
              "type": "password",
              "value": "",
            },
            "ref": [Function],
            "rendered": null,
            "type": "input",
          },
          null,
        ],
        "type": "div",
      },
      "",
      "",
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Label
            className="md-input__label"
            htmlFor="1"
            label="test"
            theme=""
          />,
          <div
            className="md-input__wrapper"
          >
            <input
              className="md-input"
              id="1"
              name="test"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              tabIndex={0}
              type="password"
              value=""
            />
          </div>,
          "",
          "",
          null,
        ],
        "className": "md-input-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": null,
            "className": "md-input__label",
            "htmlFor": "1",
            "label": "test",
            "theme": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              null,
              <input
                className="md-input"
                id="1"
                name="test"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                tabIndex={0}
                type="password"
                value=""
              />,
              null,
            ],
            "className": "md-input__wrapper",
          },
          "ref": null,
          "rendered": Array [
            null,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "md-input",
                "id": "1",
                "name": "test",
                "onBlur": [Function],
                "onChange": [Function],
                "onFocus": [Function],
                "onKeyDown": [Function],
                "onMouseDown": [Function],
                "tabIndex": 0,
                "type": "password",
                "value": "",
              },
              "ref": [Function],
              "rendered": null,
              "type": "input",
            },
            null,
          ],
          "type": "div",
        },
        "",
        "",
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`tests for <Input /> should match text SnapShot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    ariaDescribedBy={null}
    ariaLabel={null}
    className=""
    clear={false}
    clearAriaLabel={null}
    containerSize=""
    defaultValue=""
    disabled={false}
    htmlId="1"
    id={null}
    inputAfter={null}
    inputBefore={null}
    inputClassName=""
    inputHelpText=""
    inputRef={null}
    inputSize=""
    isFilled={false}
    label="test"
    messageArr={Array []}
    multiline={false}
    name="test"
    nestedLevel={0}
    onChange={null}
    onDoneEditing={null}
    onFocus={null}
    onKeyDown={null}
    onMouseDown={null}
    placeholder=""
    readOnly={false}
    secondaryLabel=""
    shape=""
    type="text"
    value=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Label
          className="md-input__label"
          htmlFor="1"
          label="test"
          theme=""
        />,
        <div
          className="md-input__wrapper"
        >
          <input
            className="md-input"
            id="1"
            name="test"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            tabIndex={0}
            type="text"
            value=""
          />
        </div>,
        "",
        "",
        null,
      ],
      "className": "md-input-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": null,
          "className": "md-input__label",
          "htmlFor": "1",
          "label": "test",
          "theme": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            null,
            <input
              className="md-input"
              id="1"
              name="test"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              tabIndex={0}
              type="text"
              value=""
            />,
            null,
          ],
          "className": "md-input__wrapper",
        },
        "ref": null,
        "rendered": Array [
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "md-input",
              "id": "1",
              "name": "test",
              "onBlur": [Function],
              "onChange": [Function],
              "onFocus": [Function],
              "onKeyDown": [Function],
              "onMouseDown": [Function],
              "tabIndex": 0,
              "type": "text",
              "value": "",
            },
            "ref": [Function],
            "rendered": null,
            "type": "input",
          },
          null,
        ],
        "type": "div",
      },
      "",
      "",
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Label
            className="md-input__label"
            htmlFor="1"
            label="test"
            theme=""
          />,
          <div
            className="md-input__wrapper"
          >
            <input
              className="md-input"
              id="1"
              name="test"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              tabIndex={0}
              type="text"
              value=""
            />
          </div>,
          "",
          "",
          null,
        ],
        "className": "md-input-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": null,
            "className": "md-input__label",
            "htmlFor": "1",
            "label": "test",
            "theme": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              null,
              <input
                className="md-input"
                id="1"
                name="test"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                tabIndex={0}
                type="text"
                value=""
              />,
              null,
            ],
            "className": "md-input__wrapper",
          },
          "ref": null,
          "rendered": Array [
            null,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "md-input",
                "id": "1",
                "name": "test",
                "onBlur": [Function],
                "onChange": [Function],
                "onFocus": [Function],
                "onKeyDown": [Function],
                "onMouseDown": [Function],
                "tabIndex": 0,
                "type": "text",
                "value": "",
              },
              "ref": [Function],
              "rendered": null,
              "type": "input",
            },
            null,
          ],
          "type": "div",
        },
        "",
        "",
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;
